# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/av_codec/config.gni")

config("av_codec_demo_muxer_config") {
  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
  ]

  cflags = [
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-all",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-Wformat=2",
    "-Wdate-time",
  ]

  cflags_cc = [
    "-std=c++17",
    "-fno-rtti",
  ]

  include_dirs = [
    "$av_codec_root_dir/interfaces/inner_api/native",
    "$av_codec_root_dir/interfaces/kits/c",
    "$av_codec_root_dir/interfaces/plugin",
    "$av_codec_root_dir/services/dfx/include",
    "$av_codec_root_dir/services/media_engine/modules/muxer",
    "$c_utils_root_dir/base/include",
  ]
}

ohos_static_library("av_codec_demo_muxer") {
  sources = [
    "avmuxer_demo.cpp",
    "avmuxer_demo_base.cpp",
    "avmuxer_demo_common.c",
    "avmuxer_demo_runner.cpp",
    "avmuxer_engine_demo.cpp",
    "avmuxer_ffmpeg_demo.cpp",
    "native_avmuxer_demo.c",
  ]
  public_configs = [ ":av_codec_demo_muxer_config" ]

  public_external_deps = [
    "ffmpeg:libohosffmpeg",
    "media_foundation:media_foundation",
  ]

  defines = []
  defines += av_codec_defines
  deps = [
    "$av_codec_root_dir/interfaces/inner_api/native:av_codec_client",
    "$av_codec_root_dir/interfaces/kits/c:capi_packages",
    "$av_codec_root_dir/services/media_engine:av_codec_media_engine_package",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "graphic_surface:sync_fence",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
