# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/unittest"

av_codec_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wno-unused-function",
  "-Wno-unused-parameter",
  "-Dprivate=public",
  "-Dprotected=public",
]

##################################################################################################################
ohos_unittest("avcenc_info_capi_unit_test") {
  sanitize = av_codec_test_sanitize

  module_out_path = module_output_path
  include_dirs = [
    "./",
    "$av_codec_root_dir/test/unittest/common",
  ]

  defines = av_codec_defines

  sources = [ "./cenc_info_capi_unit_test.cpp" ]

  cflags = av_codec_unittest_cflags

  cflags_cc = cflags

  deps = [
    "$av_codec_root_dir/interfaces/kits/c:native_media_avcencinfo",
    "$av_codec_root_dir/services/dfx:av_codec_service_dfx",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
