# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

module_output_path = "av_codec/unittest"

avmuxer_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fno-exceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

#################################################################################################################muxer
ohos_unittest("avmuxer_capi_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    sources = [
      "./avmuxer_sample.cpp",
      "./avmuxer_unit_test.cpp",
      "./capi/avmuxer_capi_mock.cpp",
      "./capi/avmuxer_capi_mock_factory.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AVMUXER_UNITTEST_CAPI",
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  public_deps =
      [ "$av_codec_root_dir/test/unittest/common:av_codec_capi_unit_test" ]

  deps = [ "$av_codec_root_dir/interfaces/kits/c:capi_packages" ]

  external_deps = [
    "av_codec:av_codec_client",
    "graphic_surface:surface",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}

#################################################################################################################muxer
ohos_unittest("avmuxer_inner_unit_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./inner",
  ]

  cflags = avmuxer_unittest_cflags

  if (av_codec_support_muxer) {
    sources = [
      "./avmuxer_sample.cpp",
      "./avmuxer_unit_test.cpp",
      "./inner/avmuxer_inner_mock.cpp",
      "./inner/avmuxer_inner_mock_factory.cpp",
    ]
  }

  if (target_cpu == "arm64" || is_emulator) {
    av_codec_path = "\"/system/lib64\""
  } else {
    av_codec_path = "\"/system/lib\""
  }
  defines = [
    "AVMUXER_UNITTEST_INNER_API",
    "AV_CODEC_PATH=${av_codec_path}",
  ]

  public_deps =
      [ "$av_codec_root_dir/test/unittest/common:av_codec_inner_unit_test" ]

  deps = [ "$av_codec_root_dir/interfaces/kits/c:native_media_codecbase" ]

  external_deps = [
    "av_codec:av_codec_client",
    "graphic_surface:surface",
  ]

  resource_config_file =
      "$av_codec_root_dir/test/unittest/resources/ohos_test.xml"
}
