# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/av_codec/config.gni")

ohos_unittest("av_codec_param_checker_test") {
  sanitize = av_codec_test_sanitize
  module_out_path = "av_codec/unittest"

  include_dirs = [ "$av_codec_root_dir/interfaces/kits/c" ]

  sources = [ "codec_param_checker_test.cpp" ]

  deps = [ "$av_codec_root_dir/interfaces/kits/c:capi_packages" ]

  external_deps = [
    "c_utils:utils",
    "media_foundation:media_foundation",
    "media_foundation:native_media_core",
  ]

  subsystem_name = "multimedia"
  part_name = "av_codec"
}
